syntax = "proto3";

package sdc.biceps;

option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "AlertSystemStateType";

import "sdc/biceps/abstractalertstate.proto";
import "sdc/biceps/systemsignalactivation.proto";
import "sdc/biceps/alertconditionreference.proto";

message AlertSystemState {
  AbstractAlertState abstract_alert_state = 1;
  SystemSignalActivation system_signal_activation = 2;
  uint64 a_last_self_check = 3;
  int64 a_self_check_count = 4;
  AlertConditionReference a_present_physiological_alarm_conditions = 5;
  AlertConditionReference a_present_technical_alarm_conditions = 6;
}
